feat: stats history
