# internal/loader/api/api.go
@@ -26,4 +26,5 @@ type API interface {
 	GetEntryCount() (*model.Total, map[string]interface{}, int, error)
 	GetYearSummary() ([]model.YearSummary, map[string]interface{}, int, error)
 	Enqueue(_type string, id int) (int, error)
+	GetStatsHistory(_type string, id int) ([]model.StatsHistory, int, error)
 }
